[package]
name = "dnaslx"
version = "0.0.1"
authors = ["dna <dnaslx@qq.com>"]
edition = "2018"
license = "Apache-2.0"
description = "a package for me"
homepage = "https://github.com/dnaslx"
documentation = "https://github.com/dnaslx"
repository = "https://github.com/dnaslx/dnaslx"
readme = "README.md"

[dependencies]
